feat: add qrcode and event routers & controllers
