# src/api/routes/qrcode.routes.ts
@@ -1,12 +1,44 @@
 import { Router } from 'express';
+import { QRCodeController } from '../controllers/qrcode.controller';
+import { RegisterRequest } from '../../domain/dtos/qrcode';
 
-export class QRCodeRoutes {
- static get routes(): Router {
-  const router = Router();
+export default class QRCodeRoutes {
+    static get routes(): Router {
+        const router = Router();
+        const controller = new QRCodeController()
 
-  // rest of operations
-  // ...
+        router.post('/register_qrcode', async (req, res) => {
+            const registerRequest: RegisterRequest  = {
+                visitId: req.body.visitId
+            }
+            const response = await controller.registerVisit(registerRequest)
+            return res.json(response)
+        })
 
-  return router;
- }
+        router.get('/access_qrcode', async (req, res) => {
+            const registerRequest: RegisterRequest  = {
+                visitId: req.body.visitId
+            }
+            const response = await controller.registerVisit(registerRequest)
+            return res.json(response)
+        })
+
+        router.get('/:visitId/dynamic_link', async (req, res) => {
+            const registerRequest: RegisterRequest  = {
+                visitId: req.params.visitId
+            }
+            const response = await controller.registerVisit(registerRequest)
+            return res.json(response)
+        })
+
+        router.get('/dynamic_link/:visitId/activate', async (req, res) => {
+            const registerRequest: RegisterRequest  = {
+                visitId: req.params.visitId
+            }
+            const response = await controller.registerVisit(registerRequest)
+            return res.json(response)
+        })
+
+        return router;
+    }
 }
