# src/domain/dtos/event.ts
@@ -1,0 +1,11 @@
+import { CardholderCheckinoutEvent } from "../entities/event"
+
+export interface EventRequest {
+  cardholderIds: string[],
+  from?: number
+  to?: number
+}
+
+export interface EventResponse {
+  events: CardholderCheckinoutEvent[]
+}
