# src/domain/entities/event.ts
@@ -1,0 +1,20 @@
+export enum EventType {
+    Cardholder_CheckinCheckout = 'Cardholder_CheckinCheckout'
+}
+
+export enum Actitity {
+    Checkin = 'Checkin',
+    Checkout = 'Checkout'
+}
+
+export interface Event {
+    timestamp: number
+    type: EventType,
+    message: string
+}
+
+export interface CardholderCheckinoutEvent extends Event {
+    cardholderId: string
+    activity: Actitity
+}
+
